GNOME Bugzilla – Bug 761435
Themes use absolute dimensions, not relative, don't adapt to font size
Last modified: 2018-05-02 16:55:57 UTC
Created attachment 320239 [details] observe text area height Gtk 3.19 uses min-height to set the height for widgets like entries. When using a 11pt font (like gnome apparently does) things don't change. Other Desktop environments like Xfce use 10pt default font size. This makes widgets appear unnecessarily large. See attachment for comparison between Gtk 2, Gtk 3.18 and master. Possible fix: decrease min-height to suit 10pt font size or revert to sizing determined by padding.
Annoys me as well (also gtk3-widget-factory no longer fits on my screen) "min-height: 2em;" looks much nicer here. Maybe use that instead of fixed size heights?
(In reply to Lukas from comment #0) > Created attachment 320239 [details] > observe text area height > > Gtk 3.19 uses min-height to set the height for widgets like entries. When > using a 11pt font (like gnome apparently does) things don't change. Other > Desktop environments like Xfce use 10pt default font size. This makes > widgets appear unnecessarily large. While those other desktops could just ship a theme that suits their needs and font size, Adwaita should probably be somewhat reactive to font size changes in both directions. Over to Lapo
This is a pretty complex issue, to make things nicer wrt font size changes properly we'd need a pair of more features, rem unit (which is the root element font em, which could just translate to default font size em in gtk+) and probably calc() operator. With those feature in place the whole sizing in adwaita need a rethink, so it's not really something for 3.20. I'd really like to tackle this in the next cycle though.
(In reply to Lapo Calamandrei from comment #3) > so it's not really something for 3.20. I'd really > like to tackle this in the next cycle though. That meas we'd be stuck with the tall widgets for at least Gtk 3.20? What's the issue with leaving things as they were in Gtk 3.18 until it's all sorted out? If we ship this like it's right now, Gtk 3.20 will be a regression for some users. We really shouldn't make shipping half-baked new implementations that are inferior to the existing ones (like broken typeahead in the file chooser) the norm.
This is not really an half backed solution, it just does sizing differently. In the past you had entries scale down with font size (with the text inside it getting misaligned), while buttons with icons inside didn't, still giving you weird results. This is a step in the right direction (since it allows you to at least change font w/o breaking the theme).
In case this hasn't been considered: I'm still using a 1366x768 display, which I guess might not be that common any more and the default font size is (subjectively...) way too large there so I use 10pt. (both windows are higher than the whole screen btw..) 3.18: https://i.imgur.com/VLH9XHx.png 3.20: https://i.imgur.com/JJFkRkT.png But I guess I'll get used to it :)
rem is supported now
I can understand that the new way of sizing widgets is desirable in terms of consistency. But users hate change. The new sizing may be more consistent, but it looks 'wrong' since the widget sizing hasn't changed that much for many years. Some may get annoyed that their favourite application now consumes more screen space without obvious benefit.
*** Bug 761693 has been marked as a duplicate of this bug. ***
http://storage7.static.itmages.ru/i/16/0211/h_1455229549_8015895_087aae88cc.png
http://storage3.static.itmages.ru/i/16/0208/h_1454936331_9780860_4a96f85634.png
calc is supported too, now
Ok I'd just need for em/rem to be consistent and quite a bit of time to adapt the theme. For consistent I mean doing the conversion to px for 1em and stick to that istead of doing em/px conversion every time (yeah we kind of do like the web, but in a ui the behaviour I'm asking for is a lot better). Now we have, with cantarell 11pt: 1em : 14px (15px on the web) 2em : 29px 3em : 44px I need, with the same font: 1em : 15px 2em : 30px 3em : 45px
With the recent changes in the last few days this thing has become even more height. http://storage8.static.itmages.ru/i/16/0225/h_1456407003_8806847_47fb9d8f1f.png
(In reply to Maxim from comment #15) > http://storage8.static.itmages.ru/i/16/0225/h_1456407003_8806847_47fb9d8f1f.png Solved with it https://git.gnome.org/browse/gtk+/commit/?id=09b15710933d4727246079d2345b84c59e9defc3
Created attachment 324748 [details] [review] inspector: add slider for adjusting the font scale Maybe this is helpful for testing the css: https://i.imgur.com/c851MBO.png
Comment on attachment 324748 [details] [review] inspector: add slider for adjusting the font scale Thanks, pushed with slight visual fixup Attachment 324748 [details] pushed as 72346cb - inspector: add slider for adjusting the font scale
There's an experimental wip/lapo/scalable-awaita branch for those eager to live on the bleeding edge
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/gtk/issues/597.