inspector: add slider for adjusting the font scale

https://bugzilla.gnome.org/show_bug.cgi?id=761435